--- a/webpages/1/1.css
+++ b/webpages/1/1.css
@@ -1,3 +1,112 @@
 * {
     font-family: Rubik;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    
+}
+
+.container {
+    background-color: #F4F6FA;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.main{
+    background-color: #FFFFFF;
+    width:  451px;
+    height: 648px;
+    border-radius: 10px;
+    box-shadow: 0px 15px 45px -25px rgba(1,39,97,0.19);
+}
+
+.title {
+    box-sizing: border-box;
+    padding-left: 45px;
+    padding-right: 45px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+#newmsg {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 22px;
+    padding-top: 45px;
+}
+
+.title img {
+    padding-top: 36px;
+}
+.input{
+    margin-top: 27px;
+    margin-left: 45px;
+    margin-right: 45px;
+    height: 76px;
+    width: 361px;
+    border-radius: 5px;
+    background-color: #F4F6Fa;
+    border: 1px solid #DEE5F0;
+
+    background-image: url('searchicon.svg');
+    background-position: 22px 22px;
+    background-repeat: no-repeat;
+    padding-left: 70px;  
+
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+
+    -webkit-appearance: value !important;
+   -moz-appearance:    value !important;
+   appearance:         value !important;
+   
+}
+.input::placeholder{
+    color: #415F8C;
+}
+.input:focus{
+    background-image: url("searchiconbk.svg");
+    border: 1px solid  #415F8Cdb !important;
+}
+
+
+/* .input:focus{
+    background-image: none;
+    padding-left:20px ;
+    border: 1px solid #fff !important;
+} */
+
+.rc {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 700;
+    margin-left: 45px;
+    margin-top: 36px;
+    letter-spacing: 2px;
+}
+
+.list {
+    margin-bottom:45px;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 100px;
+    width: 50px;
+    border: 1px solid red;
+}
+
+input[type='radio'] {
+    display: none;
+  }
+input[type='radio']:checked {
+    display: block;
+    border:1px solid red;
+}
+input[type='radio']:before {
+    display: block;
+    border:1px solid red;
 }
